--- a/public/index.html
+++ b/public/index.html
@@ -34,10 +34,10 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
       <form name="contact" netlify netlify-honeypot="bot-field" hidden>
-    <input type="text" name="name" />
-    <input type="email" name="email" />
-    <textarea name="message"></textarea>
-  </form>
+        <input type="text" name="name" />
+        <input type="email" name="email" />
+        <input  type="text" name="message"></input>
+      </form>
   
     <div id="root"></div>
     <!--
