--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
       <form name="contact" netlify netlify-honeypot="bot-field" hidden>
-        <input type="text" name="name" />
+        <!-- <input type="text" name="name" /> -->
         <input type="email" name="email" />
         <input  type="text" name="message"></input>
       </form>
