send message repair message5

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
         <input type="hidden" name="form-name" value="contact" />
         <input type="text" name="name" />
         <input type="email" name="email" />
-        <input  name="message"></input>
+        <input type="text"  name="message"></input>
       </form>
   
     <div id="root"></div>
